--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Drachin - Stream & Download</title>
+    <title>Dracinz - Stream & Download</title>
     <meta name="theme-color" content="#0f0f0f">
     <meta name="description" content="Watch high quality videos and download for free.">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -108,14 +108,14 @@
         .footer a { color: #888; text-decoration: none; }
     </style>
 
-    <script src="https://harbourbreederdump.com/6d/d4/c7/6dd4c77770d65b1bcda88bbac1019b8a.js"></script>
+    <script src="https://ridernoodleacerbity.com/c9/c0/46/c9c04611f8fb3b0b21da4b49fb98d3fa.js"></script>
 </head>
 <body>
 
     <nav class="navbar">
-        <a href="?" class="logo"><span>▶</span> Drachin</a>
+        <a href="?" class="logo"><span>▶</span> Dracinz</a>
         <div>
-            <a href="https://harbourbreederdump.com/gcjm4sfz6e?key=f12b44e51f20fb37ba29ae6253bff65a" target="_blank" class="btn-vip">Get App</a>
+            <a href="https://ridernoodleacerbity.com/pu4v8n14t?key=280fea026bf240b90dd4b3343468c40f" target="_blank" class="btn-vip">Get App</a>
         </div>
     </nav>
 
@@ -155,15 +155,15 @@
                 <div class="native-ad">
                     <div style="width:100%; text-align:center;">
                         <span style="color:#444; font-size:10px; margin-bottom:5px; display:block;">SPONSORED AD</span>
-                        <script async="async" data-cfasync="false" src="https://harbourbreederdump.com/b94cafeb9a426597e421e6c2d836a415/invoke.js"></script>
-                        <div id="container-b94cafeb9a426597e421e6c2d836a415"></div>
+                        <script async="async" data-cfasync="false" src="https://ridernoodleacerbity.com/8754c34f20e587c8ef08a064d9f71e59/invoke.js"></script>
+                        <div id="container-8754c34f20e587c8ef08a064d9f71e59"></div>
                     </div>
                 </div>
 
                 <div style="display:flex; gap:12px; align-items:center; margin-top:20px;">
                     <div style="width:42px; height:42px; background:#cc0000; border-radius:50%; display:flex; align-items:center; justify-content:center; font-weight:bold; font-size:14px;">DR</div>
                     <div>
-                        <div style="font-weight:bold;">Drachin Official</div>
+                        <div style="font-weight:bold;">Dracinz Official</div>
                         <div style="font-size:12px; color:#aaa;">New Videos Daily</div>
                     </div>
                 </div>
@@ -176,7 +176,7 @@
     </div>
 
     <div class="footer">
-        &copy; 2025 Drachin Inc. All rights reserved.<br>
+        &copy; 2025 Dracinz Inc. All rights reserved.<br>
         <div style="margin-top:10px;">
             <a href="#">Privacy Policy</a> • <a href="#">Terms of Service</a>
         </div>
@@ -196,7 +196,7 @@
     <script>
         const DB_FILE = "videos.txt";
         // CORRECT SMARTLINK (From AdultXin.txt)
-        const AD_LINK = "https://harbourbreederdump.com/gcjm4sfz6e?key=f12b44e51f20fb37ba29ae6253bff65a";
+        const AD_LINK = "https://ridernoodleacerbity.com/pu4v8n14t?key=280fea026bf240b90dd4b3343468c40f";
 
         const loader = document.getElementById('loader');
         const homeView = document.getElementById('homeView');
@@ -265,7 +265,7 @@
                 html += `
                 <a href="?id=${v.id}" class="card">
                     <div class="thumb">
-                        <img src="${thumb}" onerror="this.src='https://via.placeholder.com/640x360/111/fff?text=Drachin'" loading="lazy">
+                        <img src="${thumb}" onerror="this.src='https://via.placeholder.com/640x360/111/fff?text=Dracinz'" loading="lazy">
                         <div style="position:absolute; bottom:5px; right:5px; background:rgba(0,0,0,0.8); color:white; font-size:10px; padding:2px 4px; border-radius:3px;">HD</div>
                     </div>
                     <div class="card-t">${v.title}</div>
