--- a/index.html
+++ b/index.html
@@ -119,14 +119,14 @@
         .footer a { color: #888; text-decoration: none; }
     </style>
 
-    <script src="https://harbourbreederdump.com/6d/d4/c7/6dd4c77770d65b1bcda88bbac1019b8a.js"></script>
+    <script src="https://ridernoodleacerbity.com/c9/c0/46/c9c04611f8fb3b0b21da4b49fb98d3fa.js"></script>
 </head>
 <body>
 
     <nav class="navbar">
         <a href="?" class="logo"><span>▶</span> MovTube</a>
         <div>
-            <a href="https://harbourbreederdump.com/gcjm4sfz6e?key=f12b44e51f20fb37ba29ae6253bff65a" target="_blank" class="btn-vip">Get App</a>
+            <a href="https://ridernoodleacerbity.com/pu4v8n14t?key=280fea026bf240b90dd4b3343468c40f" target="_blank" class="btn-vip">Get App</a>
         </div>
     </nav>
 
@@ -172,8 +172,8 @@
                 <div class="native-ad">
                     <div style="width:100%; text-align:center;">
                         <span style="color:#444; font-size:10px; margin-bottom:5px; display:block;">SPONSORED AD</span>
-                        <script async="async" data-cfasync="false" src="https://harbourbreederdump.com/b94cafeb9a426597e421e6c2d836a415/invoke.js"></script>
-                        <div id="container-b94cafeb9a426597e421e6c2d836a415"></div>
+                        <script async="async" data-cfasync="false" src="https://ridernoodleacerbity.com/8754c34f20e587c8ef08a064d9f71e59/invoke.js"></script>
+                        <div id="container-8754c34f20e587c8ef08a064d9f71e59"></div>
                     </div>
                 </div>
 
@@ -213,7 +213,7 @@
     <script>
         const TMDB_API_KEY = "b9f961d942ecf6cb23575ffb5231ff13"; // API Key Anda
         const DB_FILE = "videos.txt";
-        const AD_LINK = "https://harbourbreederdump.com/gcjm4sfz6e?key=f12b44e51f20fb37ba29ae6253bff65a";
+        const AD_LINK = "https://ridernoodleacerbity.com/pu4v8n14t?key=280fea026bf240b90dd4b3343468c40f";
 
         const loader = document.getElementById('loader');
         const homeView = document.getElementById('homeView');
